Fix icon only buttons being so squished

--- a/src/app/design/atoms/button/button.component.scss
+++ b/src/app/design/atoms/button/button.component.scss
@@ -13,6 +13,9 @@
   :disabled {
     cursor: not-allowed;
   }
+
+  min-width: 40px;
+  min-height: 40px;
 }
 
 .btn {
